frontends/Scss/somanyfeeds.scss
@import 'reset';
@import 'fonts';

$light-color: #efefe0;
$mid-color: #d0d0c0;
$dark-color: #97937e;
$accent-color: #046380;
$contrast-color: #002f2f;
$fg-color: #222;
$bg-color: #fff;
$error-color: #bc0304;

$serif-fonts: 'Merriweather', 'Georgia', serif;
$serif-normal: 300;
$serif-bold: 700;
$sans-serif-fonts: 'Merriweather Sans', 'Helvetica Neue', sans-serif;
$sans-serif-normal: 400;
$small-screen-width: 600px;

@function icon-secondary-svg($path) {
  @return 'data:image/svg+xml,%3Csvg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath fill="%2397937e" d="' + $path + '" /%3E%3C/svg%3E';
}

@function icon-header-svg($path) {
  @return 'data:image/svg+xml,%3Csvg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath fill="%23fff" d="' + $path + '" /%3E%3C/svg%3E';
}

@mixin icon($icon-url) {
  background-image: url($icon-url);
  background-repeat: no-repeat;
  background-position: 1rem center;
  background-size: 1rem;
  padding-left: 2.5rem;
}

@mixin icon-secondary($path) {
  @include icon(icon-secondary-svg($path));
}

@mixin icon-header($path) {
  @include icon(icon-header-svg($path));
}

$mark-read-icon-path: 'M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z';
$mark-all-read-icon-path: 'M0.41,13.41L6,19L7.41,17.58L1.83,12M22.24,5.58L11.66,16.17L7.5,12L6.07,13.41L11.66,19L23.66,7M18,7L16.59,5.58L10.24,11.93L11.66,13.34L18,7Z';
$undo-icon-path: 'M12.5,8C9.85,8 7.45,9 5.6,10.6L2,7V16H11L7.38,12.38C8.77,11.22 10.54,10.5 12.5,10.5C16.04,10.5 19.05,12.81 20.1,16L22.47,15.22C21.08,11.03 17.15,8 12.5,8Z';


html, body {
  height: 100%;
  margin: 0;
  background-color: $mid-color;
  font-size: 16px;
  font-family: $serif-fonts;
  font-weight: $serif-normal;
  line-height: 1.4;
  color: $fg-color;
}

body {
  overflow-y: scroll;
}

figure {
  margin: 0;
}

img {
  width: calc(100% + 3rem);
  margin: 0 -1.5rem;

  @media (min-width: $small-screen-width) {
    width: calc(100% + 4rem);
    margin: 0 -2rem;
  }
}

header.app-header > div, div.main {
  max-width: 1200px;
  margin: 0 auto;
  box-sizing: border-box;
}

header.app-header {
  background-color: $contrast-color;
  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
  position: relative;

  & > div {
    position: relative;
    padding: 1rem 1.5rem;

    @media (min-width: $small-screen-width) {
      padding: 1rem 2rem;
    }
  }

  svg {
    height: 3rem;
    margin-bottom: 1.7rem;

    @media (min-width: $small-screen-width) {
      margin-bottom: -.3rem;
    }
  }

  nav {
    position: absolute;
    right: 0;
    bottom: 0;
    padding: 0 1.5rem;

    @media (min-width: $small-screen-width) {
      padding: 0 2rem;
    }

    a:link, a:hover, a:visited, a:active {
      display: inline-block;
      padding: .5rem 1rem;
      margin-left: .5rem;
      border-radius: 2px 2px 0 0;
      color: $bg-color;
    }

    a:active {
      position: relative;
      top: 1px;
    }

    a:hover {
      background-color: rgba(0, 0, 0, 0.2);
    }

    a.current {
      background-color: $accent-color;
      border-bottom: 5px solid $accent-color;
      margin-bottom: -5px;
    }
  }
}

header.page {
  background-color: $accent-color;
  padding-top: 1rem;
  padding-bottom: 4rem;
  margin-bottom: -3rem;

  > * {
    box-sizing: border-box;
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 1.5rem;

    @media (min-width: $small-screen-width) {
      padding: 0 2rem;
    }
  }

  h2 {
    color: $contrast-color;
    text-transform: uppercase;
  }

  h1 {
    color: $bg-color;
    margin-top: -.3rem;
    line-height: 1;
  }
}

section, article {
  margin-bottom: 2rem;
}

section {
  @media (min-width: $small-screen-width) {
    padding: 0 2rem;
  }
}

nav, .actions {
  text-align: right;

  .button {
    margin-left: 1rem;
  }
}

h1, h2, h3, h4 {
  line-height: 130%;
  color: $accent-color;
  font-family: $sans-serif-fonts;
  font-weight: $sans-serif-normal;
  margin: 0 0 1rem;
}

h1 {
  font-family: $serif-fonts;
  font-weight: $serif-bold;
  font-size: 2.4rem;

  @media (min-width: $small-screen-width) {
    font-size: 3rem;
  }
}

h2 {
  font-size: 1.3rem;
}

h3 {
  font-size: 1.5rem;
  color: $fg-color;
}

h4 {
  font-size: 1.1rem;
  text-transform: uppercase;
  color: $fg-color;
  margin-bottom: 0;
}

a:link, a:hover, a:visited, a:active {
  text-decoration: none;
  color: $accent-color;
}

em, strong {
  font-weight: $serif-bold;
}

p {
  margin: 0 0 1rem;

  &.message {
    font-size: 1.2rem;
    text-align: center;
    padding: 1rem;
  }

  &.big-message {
    font-size: 1.6rem;
    color: transparentize($fg-color, 0.5);
    margin-bottom: 2rem;

    strong {
      font-weight: $serif-normal;
      color: $fg-color;
    }

    &:last-child {
      margin-bottom: 0;
    }
  }

  &.error {
    color: $error-color;
  }
}

pre {
  @extend img;

  overflow-x: auto;
  background-color: rgba(255, 255, 255, 0.5);
  box-sizing: border-box;
  padding: 1rem 1.5rem;

  @media (min-width: $small-screen-width) {
    padding: 1rem 2rem;
  }
}

blockquote {
  border-left: 1rem solid transparentize($dark-color, .4);
  padding-left: 1rem;
}

hr {
  border-top: none;
  border-bottom: 1px solid $dark-color;
}

article {
  h3, p {
    max-width: 50rem;
  }

  .content {
    line-height: 1.6;
  }
}

article.read {
  padding: .5rem 1rem;

  @media (min-width: $small-screen-width) {
    padding: 1rem 2rem;
  }

  h3 {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    margin: 0;
    line-height: 2.5rem;
    font-size: 1.2rem;
    color: $dark-color;
  }
}

.date {
  color: $dark-color;
}

.row {
  display: flex;
  justify-content: space-between;

  &.responsive {
    display: block;

    @media (min-width: $small-screen-width) {
      display: flex;
    }
  }

  & > * {
    flex: 1;
  }

  & > .flex-init {
    flex: initial;
  }
}

label {
  display: block;
  margin-bottom: 1rem;

  font-family: $sans-serif-fonts;
  font-weight: $sans-serif-normal;
}

input[type="text"], input[type="password"] {
  background-color: $bg-color;
  color: $fg-color;
  border: none;
  border-radius: 2px;
  display: block;
  padding: .5rem;
  width: 100%;
  box-sizing: border-box;

  font-family: $serif-fonts;
  font-weight: $serif-normal;

  &:disabled {
    opacity: 0.5;
  }
}

.styled-select {
  padding: 0;
  background-color: $bg-color;
  color: $fg-color;
  border-radius: 2px;
  width: 100%;
  font-family: $serif-fonts;
  font-weight: $serif-normal;

  select {
    background: transparent;
    outline: none;
    width: 100%;
    cursor: pointer;
    height: 2.27rem;
    line-height: 2.27rem;
    padding: 0 .3rem;
    border-radius: 2px;
    border: none;

    &:disabled {
      opacity: 0.5;
    }
  }
}

.button {
  background-color: $dark-color;
  color: $bg-color;
  border: 2px solid $dark-color;
  border-radius: 2px;
  padding: .5rem 1rem;
  cursor: pointer;
  display: inline-block;

  font-family: $sans-serif-fonts;
  font-weight: $sans-serif-normal;
  text-transform: uppercase;
  position: relative;

  &:hover {
    background-color: lighten($dark-color, 10%);
  }

  &:active {
    top: 1px;
  }

  &:disabled {
    opacity: 0.5;
  }
}

.button.header {
    border-color: transparent;
    background-color: rgba(255, 255, 255, .1);
    color: $bg-color;

    &:hover {
      background-color: rgba(255, 255, 255, .2);
    }

    &.mark-all-read {
      @include icon-header($mark-all-read-icon-path);
    }
}

.button.primary {
  background-color: $accent-color;
  border-color: $accent-color;
  color: $bg-color;

  &:hover {
    background-color: lighten($accent-color, 5%);
  }
}

.button.secondary {
  background-color: rgba(0, 0, 0, 0.02);
  border-color: $dark-color;
  color: $dark-color;

  &:hover {
    background-color: rgba(0, 0, 0, 0.1);
  }

  &.mark-read {
    @include icon-secondary($mark-read-icon-path);
  }

  &.undo {
    @include icon-secondary($undo-icon-path);
  }
}

dl {
  margin-bottom: 1rem;

  &:last-child {
    margin-bottom: 0;
  }
}

dt {
  font-family: $sans-serif-fonts;
  font-weight: $sans-serif-normal;
  color: $accent-color;
}

.card, .dialog {
  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
  border-left: 1px solid rgba(0, 0, 0, 0.05);
  border-top: 1px solid rgba(0, 0, 0, 0.05);

  padding: 1.5rem;
  background-color: $light-color;

  @media (min-width: $small-screen-width) {
    padding: 2rem;
    border-radius: 4px;
  }
}

.dialog {
  padding: 1rem;
  position: fixed;
  top: 20%;
  z-index: 3;
  background-color: $bg-color;

  @media (min-width: $small-screen-width) {
    width: 30rem;
    left: 50%;
    margin-left: -15rem;
  }
}

.card-list {
  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
  background-color: $light-color;

  .card {
    box-shadow: none;

    &:nth-of-type(even) {
      background-color: rgba(0, 0, 0, 0.02);
    }
  }

  h3 {
    margin: 0;
    padding: .5rem 1rem;
    background-color: $dark-color;
    color: $bg-color;
  }

  @media (min-width: $small-screen-width) {
    border-radius: 4px;

    h3 {
      padding: .5rem 2rem;
    }

    .card {
      border-radius: 0;
      display: flex;
    }

    dl, nav {
      flex: 1;
    }

    > :first-child {
      border-top-left-radius: 4px;
      border-top-right-radius: 4px;
    }

    > :last-child {
      border-bottom-left-radius: 4px;
      border-bottom-right-radius: 4px;
    }
  }
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;

  z-index: 2;
  background-color: transparentize($light-color, 0.3);
  opacity: 0.5;

  animation-name: fadeIn;
  animation-duration: .25s;
  animation-timing-function: ease-in-out;
  animation-fill-mode: forwards;

  &.closed {
    opacity: 0;
    animation-name: fadeOut;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
    visibility: hidden;
  }
  100% {
    opacity: 1;
    visibility: visible;
  }
}

@keyframes fadeOut {
  0% {
    opacity: 1;
    visibility: visible;
  }
  100% {
    opacity: 0;
    visibility: hidden;
  }
}

.mark-read {

}

